--- a/eda.ipynb
+++ b/eda.ipynb
@@ -3155,12 +3155,22 @@
    "id": "281b3752",
    "metadata": {},
    "source": [
-    "## Random Forest Features Importance"
+    "## Random Forest Features Importance Classifier\n",
+    "**Purpose:**\n",
+    "- The Random Forest model can be used to calculate relative importance score between target and feature variables\n",
+    "- This provide insights into which features are most influential in making predictions, but does not imply causal relationship\n",
+    "\n",
+    "**Findings:**\n",
+    "- Age (0.169169): Age remains the most influential feature according to the Random Forest model. This indicates that age is a crucial factor in predicting the ticket type. Older passengers may have distinct preferences or priorities when choosing a ticket type.\n",
+    "\n",
+    "- Online Check-in (0.083794): Online check-in retains its significance as the second most important feature. This suggests that the preference for online check-in strongly influences the prediction of ticket types. Passengers who value online check-in may have specific ticket preferences.\n",
+    "\n",
+    "- Onboard Wifi Service (0.065212): The availability or quality of onboard wifi is identified as a notable factor. This implies that the provision of onboard wifi can significantly impact the choice of ticket type. Passengers who consider wifi important may lean towards specific ticket types."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "b58e24d9",
    "metadata": {},
    "outputs": [
@@ -3193,82 +3203,82 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Age</td>\n",
-       "      <td>0.167476</td>\n",
+       "      <td>0.166579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Online Check-in</td>\n",
-       "      <td>0.085977</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Onboard Wifi Service</td>\n",
-       "      <td>0.065972</td>\n",
+       "      <td>0.087238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Cabin service</td>\n",
-       "      <td>0.064427</td>\n",
+       "      <td>0.064474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Onboard Wifi Service</td>\n",
+       "      <td>0.064160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Embarkation/Disembarkation time convenient</td>\n",
-       "      <td>0.062574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Port Check-in Service</td>\n",
-       "      <td>0.061249</td>\n",
+       "      <td>0.062540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Gate location</td>\n",
-       "      <td>0.059702</td>\n",
+       "      <td>0.060780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Port Check-in Service</td>\n",
+       "      <td>0.060409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Onboard Service</td>\n",
-       "      <td>0.057422</td>\n",
+       "      <td>0.058718</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Baggage handling</td>\n",
-       "      <td>0.056447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Source of Traffic</td>\n",
-       "      <td>0.053779</td>\n",
+       "      <td>0.057235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ease of Online booking</td>\n",
-       "      <td>0.053516</td>\n",
+       "      <td>0.054440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Source of Traffic</td>\n",
+       "      <td>0.053554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Cabin Comfort</td>\n",
-       "      <td>0.049605</td>\n",
+       "      <td>0.049858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Onboard Entertainment</td>\n",
-       "      <td>0.049289</td>\n",
+       "      <td>0.048314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Onboard Dining Service</td>\n",
-       "      <td>0.043991</td>\n",
+       "      <td>0.044163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Cleanliness</td>\n",
-       "      <td>0.040117</td>\n",
+       "      <td>0.039748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Gender</td>\n",
-       "      <td>0.028458</td>\n",
+       "      <td>0.027791</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3276,31 +3286,37 @@
       ],
       "text/plain": [
        "                                       Feature  Importance\n",
-       "13                                         Age    0.167476\n",
-       "5                              Online Check-in    0.085977\n",
-       "0                         Onboard Wifi Service    0.065972\n",
-       "8                                Cabin service    0.064427\n",
-       "1   Embarkation/Disembarkation time convenient    0.062574\n",
-       "10                       Port Check-in Service    0.061249\n",
-       "3                                Gate location    0.059702\n",
-       "11                             Onboard Service    0.057422\n",
-       "9                             Baggage handling    0.056447\n",
-       "15                           Source of Traffic    0.053779\n",
-       "2                       Ease of Online booking    0.053516\n",
-       "6                                Cabin Comfort    0.049605\n",
-       "7                        Onboard Entertainment    0.049289\n",
-       "4                       Onboard Dining Service    0.043991\n",
-       "12                                 Cleanliness    0.040117\n",
-       "14                                      Gender    0.028458"
+       "13                                         Age    0.166579\n",
+       "5                              Online Check-in    0.087238\n",
+       "8                                Cabin service    0.064474\n",
+       "0                         Onboard Wifi Service    0.064160\n",
+       "1   Embarkation/Disembarkation time convenient    0.062540\n",
+       "3                                Gate location    0.060780\n",
+       "10                       Port Check-in Service    0.060409\n",
+       "11                             Onboard Service    0.058718\n",
+       "9                             Baggage handling    0.057235\n",
+       "2                       Ease of Online booking    0.054440\n",
+       "15                           Source of Traffic    0.053554\n",
+       "6                                Cabin Comfort    0.049858\n",
+       "7                        Onboard Entertainment    0.048314\n",
+       "4                       Onboard Dining Service    0.044163\n",
+       "12                                 Cleanliness    0.039748\n",
+       "14                                      Gender    0.027791"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "ordinal_features = ['Onboard Wifi Service', 'Embarkation/Disembarkation time convenient', \n",
+    "                    'Ease of Online booking', 'Gate location', 'Onboard Dining Service', \n",
+    "                    'Online Check-in', 'Cabin Comfort', 'Onboard Entertainment', \n",
+    "                    'Cabin service', 'Baggage handling', 'Port Check-in Service', \n",
+    "                    'Onboard Service', 'Cleanliness', 'Age', 'Gender', 'Source of Traffic']\n",
     "\n",
     "# Define X (features) and y (target)\n",
     "X = merged_data[ordinal_features]\n",
@@ -3319,21 +3335,6 @@
     "importance_df = pd.DataFrame({'Feature': ordinal_features, 'Importance': feature_importances})\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
     "importance_df\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fcc4e7a4",
-   "metadata": {},
-   "source": [
-    "# Insights and Conclusions\n",
-    "**Purpose:** \n",
-    "- Summarize key findings and draw conclusions\n",
-    "\n",
-    "**Actions:**\n",
-    "- Provide summary of most important insights\n",
-    "- Explain any unexpected or interesting patterns\n",
-    "- Discuss implications and potential next steps"
    ]
   }
  ],
