--- a/eda.ipynb
+++ b/eda.ipynb
@@ -15,14 +15,44 @@
    "metadata": {},
    "source": [
     "**Outline:**\n",
-    "1. Data Loading\n",
-    "2. Basic Data Exploration\n",
-    "3. Data Preprocessing\n",
+    "1. [Data Loading](#data-loading)\n",
+    "2. [Basic Data Exploration](#basic-data-exploration)\n",
     "\n",
-    "    3a. 'Age' feature engineering\n",
+    "    2a. [Findings](#findings)\n",
+    "\n",
+    "    2ai. [Pre-purchase Survey](#pre-purchase-survey)\n",
+    "\n",
+    "    2aii. [Post-trip Data](#post-cruise-data)\n",
+    "        \n",
+    "3. [Data Preprocessing](#data-preprocessing)\n",
+    "\n",
+    "    3a. [Merging Dataset](#merging-both-datasets)\n",
+    "\n",
+    "    3b. [Standardising Indicator Value](#standardising-indicator-values)\n",
+    "\n",
+    "    3c. [Standardising Cruise Name](#standardising-cruise-name)\n",
+    "\n",
+    "    3d. [Standising Cruise Distance](#standardising-cruise-distance)\n",
+    "\n",
+    "    3e. [Correct Indicators with Invalid Ratings](#correct-indicators-with-invalid-ratings)\n",
+    "\n",
+    "    3f. [Correct `Dining` column data type](#correct-data-type-of-dining-from-int64-to-float64)\n",
+    "\n",
+    "    3g. [Encode `Ticket Type`, `Gender` and `Source of Traffic`](#encode-ticket-type-gender-and-source-of-traffic)\n",
+    "\n",
+    "    3h. [Handling Missing Data](#handling-missing-values)\n",
+    "\n",
+    "      3hi. [Drop NaN Rows in `Ticket Type` Column](#drop-nan-rows-in-ticket-type-column)\n",
+    "\n",
+    "      3hii. [Imput NaN Rows in `Cruise Name` with Column Mode](#impute-nan-rows-in-cruise-name-with-column-mode)\n",
+    "\n",
+    "      3hiii. [Impute NaN Rows in `Gender` with Column Mode](#impute-nan-rows-in-gender-with-column-mode)\n",
+    "\n",
+    "      3hiv. [Impute NaN Rows in `Onboard Dining Service` to `Cleanliness` with Column Mode](#impute-nan-rows-in-onboard-dining-service-to-cleanliness-with-column-mode)\n",
+    "\n",
+    "      3hvi. [Impute NaN Rows in `Cruise Distance` with Column Mean](#impute-nan-rows-with-mean-of-column-values-in-cruise-distance)\n",
     "    \n",
-    "4. In-Depth Data Exploration\n",
-    "5. Insights and Conclusions"
+    "4. [In-Depth Data Exploration](#in-depth-exploratory-data-analysis)"
    ]
   },
   {
@@ -53,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4f9e6c65",
    "metadata": {},
    "outputs": [],
@@ -76,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f3c4e8e8",
    "metadata": {},
    "outputs": [],
@@ -102,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "12bcbff7",
    "metadata": {},
    "outputs": [],
@@ -150,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a3f4aa0c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "347943a7",
    "metadata": {},
    "outputs": [
@@ -224,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8689daa8",
    "metadata": {},
    "outputs": [
@@ -402,7 +432,7 @@
        "max            5.000000               5.000000         5.000000       5.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "161f2154",
    "metadata": {},
    "outputs": [
@@ -441,7 +471,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "20c64e67",
    "metadata": {},
    "outputs": [
@@ -508,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ca5845a2",
    "metadata": {},
    "outputs": [
@@ -564,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "85761e70",
    "metadata": {},
    "outputs": [
@@ -574,7 +604,7 @@
        "Text(0.5, 1.0, 'cruise_post_df')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -632,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4497f975",
    "metadata": {},
    "outputs": [
@@ -713,7 +743,7 @@
        "Very important                       27520  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d593def7",
    "metadata": {},
    "outputs": [
@@ -744,7 +774,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "73fbe97f",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1039,7 @@
        "4                        5.0              2.0          NaN  LB218CFLOBS  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1054,7 @@
    "id": "fe4c6fe1",
    "metadata": {},
    "source": [
-    "### Post-cruise Customer Data\n",
+    "### Post-cruise Data\n",
     "Description:\n",
     "- This is the post trip data, which contains the target variable 'Ticket Type' we are trying to predict.\n",
     "\n",
@@ -1039,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e17cf1e3",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1186,7 @@
        "4                NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fb8525dc",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1374,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1393,7 @@
    "id": "9e8db1c2",
    "metadata": {},
    "source": [
-    "## Standardising values for survey questions\n",
+    "## Standardising Indicator Values\n",
     "\n",
     "**Purpose:**\n",
     "1. inconsistent format makes data plotting across these variables difficult\n",
@@ -1380,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b6468b52",
    "metadata": {},
    "outputs": [],
@@ -1404,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ad57790e",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1589,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6462ae4e",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1643,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1625,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8a0b984f",
    "metadata": {},
    "outputs": [],
@@ -1664,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "46f6ab27",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1716,7 @@
        "Length: 8995, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2c63a5f5",
    "metadata": {},
    "outputs": [],
@@ -1729,7 +1759,7 @@
    "id": "002a64e8",
    "metadata": {},
    "source": [
-    "## Handle ratings with invalid values\n",
+    "## Correct Indicators with Invalid Ratings\n",
     "**Purpose:**\n",
     "- Ratings cannot 0, we need to either remove or do imputation\n",
     "\n",
@@ -1752,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "95fff721",
    "metadata": {},
    "outputs": [],
@@ -1787,12 +1817,12 @@
    "id": "040e0809",
    "metadata": {},
    "source": [
-    "### Change data type of `Dining` from int64 to float64\n"
+    "## Correct data type of `Dining` from int64 to float64\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "a222b577",
    "metadata": {},
    "outputs": [],
@@ -1806,7 +1836,7 @@
    "id": "1ba77fd1",
    "metadata": {},
    "source": [
-    "### Encode `Ticket Type`, `Gender` and `Source of Traffic`\n",
+    "## Encode `Ticket Type`, `Gender` and `Source of Traffic`\n",
     "**Purpose:**\n",
     "- Models and algorithms require data to be in numerics\n",
     "- In case of categorical labels, we can encode them ordinally\n",
@@ -1829,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "c0b46423",
    "metadata": {},
    "outputs": [],
@@ -1857,7 +1887,7 @@
    "id": "75975c09",
    "metadata": {},
    "source": [
-    "## Basic Feature Engineering"
+    "## Basic Feature Engineering (to do: move to after handle missing value)"
    ]
   },
   {
@@ -1872,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "02a059a3",
    "metadata": {},
    "outputs": [],
@@ -1920,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "dcfd0af9",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1972,7 @@
        "Length: 103, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "20c4c6ba",
    "metadata": {},
    "outputs": [],
@@ -1982,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "df8f2242",
    "metadata": {},
    "outputs": [],
@@ -1997,12 +2027,12 @@
    "id": "10a8d878",
    "metadata": {},
    "source": [
-    "### Label NaN rows with 'Missing' in `Cruise Name` column"
+    "### Impute NaN Rows in `Cruise Name` with Column Mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "c19918cb",
    "metadata": {},
    "outputs": [],
@@ -2016,12 +2046,12 @@
    "id": "fdc621d9",
    "metadata": {},
    "source": [
-    "### Label NaN rows with 'Missing' in `Gender` column"
+    "### Impute NaN Rows in `Gender` with Column Mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "daef2e2f",
    "metadata": {},
    "outputs": [],
@@ -2032,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "28293add",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "bb2624e5",
    "metadata": {},
    "outputs": [
@@ -2269,7 +2299,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,32 +2313,13 @@
    "id": "7502ccee",
    "metadata": {},
    "source": [
-    "### Impute NaN rows with mode of column value in `Ease of Online booking`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "71dc3f9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Replace missing data with the column's mode\n",
-    "merged_data['Ease of Online booking'].fillna(merged_data['Ease of Online booking'].mode()[0], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72c35adc",
-   "metadata": {},
-   "source": [
-    "### Repeat imputation for other rating columns with mode"
+    "### Impute NaN rows in `Onboard Dining Service` to `Cleanliness` with Column Mode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1ace2d83",
+   "id": "71dc3f9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3170,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "id": "b58e24d9",
    "metadata": {},
    "outputs": [
@@ -3203,82 +3214,82 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Age</td>\n",
-       "      <td>0.166579</td>\n",
+       "      <td>0.168386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Online Check-in</td>\n",
-       "      <td>0.087238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Cabin service</td>\n",
-       "      <td>0.064474</td>\n",
+       "      <td>0.084612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Onboard Wifi Service</td>\n",
-       "      <td>0.064160</td>\n",
+       "      <td>0.066327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Cabin service</td>\n",
+       "      <td>0.064439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Embarkation/Disembarkation time convenient</td>\n",
-       "      <td>0.062540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Gate location</td>\n",
-       "      <td>0.060780</td>\n",
+       "      <td>0.061115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Port Check-in Service</td>\n",
-       "      <td>0.060409</td>\n",
+       "      <td>0.060736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gate location</td>\n",
+       "      <td>0.060160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Onboard Service</td>\n",
-       "      <td>0.058718</td>\n",
+       "      <td>0.058764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Baggage handling</td>\n",
-       "      <td>0.057235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ease of Online booking</td>\n",
-       "      <td>0.054440</td>\n",
+       "      <td>0.057751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Source of Traffic</td>\n",
-       "      <td>0.053554</td>\n",
+       "      <td>0.053513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ease of Online booking</td>\n",
+       "      <td>0.053405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Cabin Comfort</td>\n",
-       "      <td>0.049858</td>\n",
+       "      <td>0.049560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Onboard Entertainment</td>\n",
-       "      <td>0.048314</td>\n",
+       "      <td>0.048827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Onboard Dining Service</td>\n",
-       "      <td>0.044163</td>\n",
+       "      <td>0.044052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Cleanliness</td>\n",
-       "      <td>0.039748</td>\n",
+       "      <td>0.039883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Gender</td>\n",
-       "      <td>0.027791</td>\n",
+       "      <td>0.028468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3286,25 +3297,25 @@
       ],
       "text/plain": [
        "                                       Feature  Importance\n",
-       "13                                         Age    0.166579\n",
-       "5                              Online Check-in    0.087238\n",
-       "8                                Cabin service    0.064474\n",
-       "0                         Onboard Wifi Service    0.064160\n",
-       "1   Embarkation/Disembarkation time convenient    0.062540\n",
-       "3                                Gate location    0.060780\n",
-       "10                       Port Check-in Service    0.060409\n",
-       "11                             Onboard Service    0.058718\n",
-       "9                             Baggage handling    0.057235\n",
-       "2                       Ease of Online booking    0.054440\n",
-       "15                           Source of Traffic    0.053554\n",
-       "6                                Cabin Comfort    0.049858\n",
-       "7                        Onboard Entertainment    0.048314\n",
-       "4                       Onboard Dining Service    0.044163\n",
-       "12                                 Cleanliness    0.039748\n",
-       "14                                      Gender    0.027791"
+       "13                                         Age    0.168386\n",
+       "5                              Online Check-in    0.084612\n",
+       "0                         Onboard Wifi Service    0.066327\n",
+       "8                                Cabin service    0.064439\n",
+       "1   Embarkation/Disembarkation time convenient    0.061115\n",
+       "10                       Port Check-in Service    0.060736\n",
+       "3                                Gate location    0.060160\n",
+       "11                             Onboard Service    0.058764\n",
+       "9                             Baggage handling    0.057751\n",
+       "15                           Source of Traffic    0.053513\n",
+       "2                       Ease of Online booking    0.053405\n",
+       "6                                Cabin Comfort    0.049560\n",
+       "7                        Onboard Entertainment    0.048827\n",
+       "4                       Onboard Dining Service    0.044052\n",
+       "12                                 Cleanliness    0.039883\n",
+       "14                                      Gender    0.028468"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
